--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "format": "blade-formatter --write resources/views/**/*.blade.php",
+        "format:check": "blade-formatter --check-formatted resources/views/**/*.blade.php",
+        "format:diff": "blade-formatter --diff resources/views/**/*.blade.php",
+        "prepare": "husky install"
     },
     "devDependencies": {
         "@tailwindcss/forms": "^0.5.2",
@@ -12,8 +16,11 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.11.0",
+        "blade-formatter": "^1.44.2",
         "concurrently": "^9.0.1",
+        "husky": "^8.0.0",
         "laravel-vite-plugin": "^2.0.0",
+        "lint-staged": "^16.1.5",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.1.0",
         "vite": "^7.0.4"
